<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/diary_bg"
    tools:context="com.example.lx.daygram.DiaryActivity">

    <TextView
        android:id="@+id/diary_details_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:typeface="sans"
        android:textSize="30sp"
        android:text="@string/diary_detials_date"
        android:background="@null"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>

    <View
        android:layout_width="260dp"
        android:layout_gravity="center"
        android:layout_height="1.1dp"
        android:background="#000000"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"/>
            <EditText
                android:id="@+id/diary_details_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:textSize="18sp"
                android:hint="@string/diary_text_hint"
                android:background="@null"
                android:gravity="top"/>

    <ScrollView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="vertical">
             <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp">

                <ImageButton
                    android:id="@+id/diary_details_time"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/add_time_btn"
                    android:contentDescription="@string/diary_details_insert_time"/>

                <ImageButton
                    android:id="@+id/diary_details_home_button"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/home_line"
                    android:contentDescription="@string/diary_details_home_button"/>

                <ImageButton
                    android:id="@+id/diary_details_save"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/done_btn"
                    android:contentDescription="@string/diary_details_save"/>

            </RelativeLayout>

        </ScrollView>
</LinearLayout>
